# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  entrypoint.sh  pyproject.toml  req.txt  setup.cfg
.github/workflows/: main.yml
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: labels_db.json  statuses_db.json  tasks_db.json  users_db.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py  0003_alter_label_name.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py  0003_alter_status_name.py
task_manager/task/: admin.py  models.py
task_manager/task/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels_alter_task_name.py  0002_alter_task_name.py  0003_alter_task_author.py  0003_alter_task_performer.py  0004_alter_task_author_alter_task_name.py  0004_alter_task_performer.py  0005_auto_20241029_1154.py  0006_alter_task_executor.py
task_manager/templates/: base.html  index.html  nav.html
task_manager/templates/labels/: label_confirm_delete.html  label_create.html  label_form.html  label_list.html
task_manager/templates/statuses/: status_confirm_delete.html  (+3 more)
task_manager/tests/: __init__.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/utils/: filters.py  mixins.py
(+19 files in other folders)
